# CryptoNightMiner

./: README.md  build.gradle  settings.gradle
base/: build.gradle  proguard-rules.pro
base/src/main/: AndroidManifest.xml
base/src/main/java/com/cpf/baseproject/base/: BaseActivity.kt  BaseFragment.kt  BaseModel.kt  BasePresenter.kt  ILifeObserver.kt
base/src/main/java/com/cpf/baseproject/bean/: JsonMessage.kt
base/src/main/java/com/cpf/baseproject/util/: Async.kt  Base64.kt  File.kt  Fuel.kt  JsonCache.kt  Log.kt  Notice.kt  ObjectIO.kt  SHA256.kt  SeekBar.kt  SharedPreference.kt  Sqlite.kt  Text.kt  WebView.kt
base/src/main/java/com/cpf/baseproject/widget/: RefreshLayout.kt  SwipeBackLayout.kt  TextChangeListener.kt
base/src/main/res/anim/: slide_center_to_down.xml  slide_center_to_up.xml  slide_down_to_center.xml  slide_up_to_center.xml
base/src/main/res/values/: colors.xml  strings.xml  styles.xml
gradle/wrapper/: gradle-wrapper.properties
xmrminer/: build.gradle  proguard-rules.pro
xmrminer/src/main/: AndroidManifest.xml
xmrminer/src/main/java/com/cpf/cryptonight/: Miner.kt
xmrminer/src/main/java/com/cpf/xmrminer/: HexUtil.java  Job.kt  JobTest.kt  MainActivity.kt  MinerEventListener.kt  MinerManager.kt  MinerMsgListener.kt  MinerService.kt
xmrminer/src/main/jni/: CMakeLists.txt  cryptonight.c  cryptonight_jni.c
xmrminer/src/main/jni/crypto/: oaes_lib.c
xmrminer/src/main/res/layout/: activity_main.xml
xmrminer/src/main/res/values/: strings.xml  styles.xml
